--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -84,6 +84,7 @@ jobs:
                 echo true > $BUILD_FAILED_FILE
                 echo "### $policy" >> $SUMMARY_FILE
                 echo "- Build failed" >> $SUMMARY_FILE
+                echo "op" >> $SUMMARY_FILE
                 echo '```' >> $SUMMARY_FILE
                 echo "$output" >> $SUMMARY_FILE
                 echo '```' >> $SUMMARY_FILE
