--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -88,6 +88,7 @@ jobs:
                 echo "$output" >> $SUMMARY_FILE
                 echo "```" >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+                echo $SUMMARY_FILE
               else
                 echo "Build successful for $policy"
               fi
