--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -304,6 +304,10 @@ jobs:
 
       - name: Run Build and Checks
         if: steps.policies.outputs.has_changes == 'true'
+        env:
+          ENABLE_GOVULNCHECK: false  # Set to true to enable vulnerability checks
+          ENABLE_GOSEC: false       # Set to true to enable security checks with gosec
+          ENABLE_STATICCHECK: true  # Set to false to disable static analysis checks
         run: |
           FAILED=false
           echo "## 🛡️ PR Checks Summary" >> $GITHUB_STEP_SUMMARY
@@ -347,8 +351,24 @@ jobs:
             fi
 
             # Staticcheck
-            if ! sc_out=$(staticcheck ./... 2>&1); then
-              CHECK_ERRORS+=$'\n- #### Static Analysis (staticcheck)\n```text\n'"$sc_out"$'\n```\n'
+            if [[ "${ENABLE_STATICCHECK:-true}" == "true" ]]; then
+              if ! sc_out=$(staticcheck ./... 2>&1); then
+                CHECK_ERRORS+=$'\n- #### Static Analysis (staticcheck)\n```text\n'"$sc_out"$'\n```\n'
+              fi
+            fi
+
+            # Vulnerability check (optional)
+            if [[ "${ENABLE_GOVULNCHECK:-false}" == "true" ]]; then
+              if ! vuln_out=$(govulncheck ./... 2>&1); then
+                CHECK_ERRORS+=$'\n- #### Vulnerability Check Failed\n```text\n'"$vuln_out"$'\n```\n'
+              fi
+            fi
+
+            # Security check (optional)
+            if [[ "${ENABLE_GOSEC:-false}" == "true" ]]; then
+              if ! gosec_out=$(gosec ./... 2>&1); then
+                CHECK_ERRORS+=$'\n- #### Security Check (gosec) Failed\n```text\n'"$gosec_out"$'\n```\n'
+              fi
             fi
 
             # Tests
