--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -267,7 +267,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.25.3"
+          go-version: "1.25.5"
           cache: false
 
       - name: Install Go tools
@@ -382,8 +382,8 @@ jobs:
               echo "$CHECK_ERRORS" >> $GITHUB_STEP_SUMMARY
               FAILED=true
             else
-              echo "### ✅ $policy" >> $GITHUB_STEP_SUMMARY
-              echo "All checks passed successfully." >> $GITHUB_STEP_SUMMARY
+              # echo "### ✅ $policy" >> $GITHUB_STEP_SUMMARY
+              echo "- All checks passed successfully ✅" >> $GITHUB_STEP_SUMMARY
             fi
 
           done <<< "${{ steps.policies.outputs.policies }}"
