--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,242 +1,3 @@
-# name: PR Checks
-
-# on:
-#   pull_request_target:
-#     branches:
-#       - main
-#       - '*.*.0'
-#     paths:
-#       - 'policies/**'
-
-# permissions:
-#   contents: read
-#   pull-requests: read
-
-# jobs:
-#   pr-checks:
-#     name: Go PR Validation
-#     runs-on: ubuntu-latest
-#     timeout-minutes: 25
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
-#         with:
-#           fetch-depth: 0
-#           ref: ${{ github.event.pull_request.head.sha }}
-
-#       - name: Setup Go
-#         uses: actions/setup-go@v5
-#         with:
-#           go-version: "1.25.3"
-#           cache: false
-
-#       - name: Install Go tools
-#         run: |
-#           go install golang.org/x/tools/cmd/goimports@latest
-#           go install honnef.co/go/tools/cmd/staticcheck@latest
-#           go install golang.org/x/vuln/cmd/govulncheck@latest
-#           go install github.com/securego/gosec/v2/cmd/gosec@latest
-
-#       - name: Detect changed policies
-#         id: policies
-#         run: |
-#           BASE="${{ github.event.pull_request.base.sha }}"
-#           HEAD="${{ github.event.pull_request.head.sha }}"
-#           POLICIES=$(git diff --name-only "$BASE" "$HEAD" | grep '^policies/' | while read -r f; do
-#             d=$(dirname "$f")
-#             while [[ "$d" != "policies" && "$d" != "." ]]; do
-#               [[ -f "$d/go.mod" ]] && echo "${d#policies/}" && break
-#               d=$(dirname "$d")
-#             done
-#           done | sort -u)
-
-#           echo "Detected policies: $POLICIES"
-
-#           if [[ -z "$POLICIES" ]]; then
-#             echo "has_changes=false" >> $GITHUB_OUTPUT
-#           else
-#             echo "has_changes=true" >> $GITHUB_OUTPUT
-#             echo "policies<<EOF" >> $GITHUB_OUTPUT
-#             echo "$POLICIES" >> $GITHUB_OUTPUT
-#             echo "EOF" >> $GITHUB_OUTPUT
-#           fi
-
-#       - name: Build policies
-#         id: build
-#         if: steps.policies.outputs.has_changes == 'true'
-#         run: |
-#           BUILD_FAILED_FILE=$(mktemp)
-#           SUMMARY_FILE=$(mktemp)
-          
-#           # Read policies line by line
-#           while IFS= read -r policy || [[ -n "$policy" ]]; do
-#             [[ -z "$policy" ]] && continue
-#             echo "Building policy: $policy"
-            
-#             # Ensure we're in the repository root
-#             cd ${{ github.workspace }}
-            
-#             if [[ -d "policies/$policy" ]]; then
-#               cd "policies/$policy"
-#               if ! output=$(go build . 2>&1); then
-#                 echo "Build failed for $policy"
-#                 echo true > $BUILD_FAILED_FILE
-#                 echo "### $policy" >> $SUMMARY_FILE
-#                 echo "- Build failed" >> $SUMMARY_FILE
-#                 echo '```bash' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```bash' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Build successful for $policy"
-#               fi
-#             else
-#               echo "Directory not found for $policy"
-#               echo true > $BUILD_FAILED_FILE
-#               echo "### $policy" >> $SUMMARY_FILE
-#               echo "- Directory not found: policies/$policy" >> $SUMMARY_FILE
-#               echo "" >> $SUMMARY_FILE
-#             fi
-#           done <<< "${{ steps.policies.outputs.policies }}"
-          
-#           SUMMARY=$(cat $SUMMARY_FILE)
-#           echo "build_summary<<EOF" >> $GITHUB_OUTPUT
-#           echo "$SUMMARY" >> $GITHUB_OUTPUT
-#           echo "EOF" >> $GITHUB_OUTPUT
-#           if [ -f $BUILD_FAILED_FILE ]; then
-#             echo "build_failed=true" >> $GITHUB_OUTPUT
-#           else
-#             echo "build_failed=false" >> $GITHUB_OUTPUT
-#           fi
-
-#       - name: Run checks on policies
-#         id: checks
-#         if: steps.policies.outputs.has_changes == 'true' && steps.build.outputs.build_failed != 'true'
-#         run: |
-#           SUMMARY_FILE=$(mktemp)
-          
-#           # Read policies line by line
-#           while IFS= read -r policy || [[ -n "$policy" ]]; do
-#             [[ -z "$policy" ]] && continue
-#             echo "Checking policy: $policy"
-            
-#             # Ensure we're in the repository root
-#             cd ${{ github.workspace }}
-            
-#             if [[ -d "policies/$policy" ]]; then
-#               cd "policies/$policy"
-              
-#               # Formatting check
-#               if ! output=$(goimports -d . 2>&1); then
-#                 echo "Formatting failed for $policy"
-#                 echo "### $policy" >> $SUMMARY_FILE
-#                 echo "- Formatting failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Formatting successful for $policy"
-#               fi
-              
-#               # Static check
-#               if ! output=$(staticcheck ./... 2>&1); then
-#                 echo "Static check failed for $policy"
-#                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
-#                 echo "- Static check failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Static check successful for $policy"
-#               fi
-              
-#               # Vulnerability check
-#               if ! output=$(govulncheck ./... 2>&1); then
-#                 echo "Vulnerability check failed for $policy"
-#                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
-#                 echo "- Vulnerability check failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Vulnerability check successful for $policy"
-#               fi
-              
-#               # Gosec check
-#               if ! output=$(gosec ./... 2>&1); then
-#                 echo "Gosec check failed for $policy"
-#                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
-#                 echo "- Gosec check failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Gosec check successful for $policy"
-#               fi
-              
-#               # Tests
-#               if ! output=$(go test ./... 2>&1); then
-#                 echo "Tests failed for $policy"
-#                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
-#                 echo "- Tests failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Tests successful for $policy"
-#               fi
-              
-#               # Tests with race
-#               if ! output=$(go test -race ./... 2>&1); then
-#                 echo "Tests with race failed for $policy"
-#                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
-#                 echo "- Tests with race failed" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "$output" >> $SUMMARY_FILE
-#                 echo '```' >> $SUMMARY_FILE
-#                 echo "" >> $SUMMARY_FILE
-#               else
-#                 echo "Tests with race successful for $policy"
-#               fi
-#             else
-#               echo "Directory not found for checks for $policy"
-#               echo "### $policy" >> $SUMMARY_FILE
-#               echo "- Directory not found for checks" >> $SUMMARY_FILE
-#               echo "" >> $SUMMARY_FILE
-#             fi
-#           done <<< "${{ steps.policies.outputs.policies }}"
-          
-#           SUMMARY=$(cat $SUMMARY_FILE)
-#           echo "summary<<EOF" >> $GITHUB_OUTPUT
-#           echo "$SUMMARY" >> $GITHUB_OUTPUT
-#           echo "EOF" >> $GITHUB_OUTPUT
-
-#       - name: Generate Summary
-#         if: steps.policies.outputs.has_changes == 'true'
-#         run: |
-#           echo "## PR Checks Summary" >> $GITHUB_STEP_SUMMARY
-#           echo "" >> $GITHUB_STEP_SUMMARY
-#           if [[ -n "${{ steps.build.outputs.build_summary }}" ]]; then
-#             echo "### Build Failures" >> $GITHUB_STEP_SUMMARY
-#             printf '%s\n' "${{ steps.build.outputs.build_summary }}" >> $GITHUB_STEP_SUMMARY
-#             echo "" >> $GITHUB_STEP_SUMMARY
-#           fi
-#           if [[ -n "${{ steps.checks.outputs.summary }}" ]]; then
-#             echo "### Check Failures" >> $GITHUB_STEP_SUMMARY
-#             printf '%s\n' "${{ steps.checks.outputs.summary }}" >> $GITHUB_STEP_SUMMARY
-#             echo "" >> $GITHUB_STEP_SUMMARY
-#           fi
-
-#       - name: Fail if build failed
-#         if: steps.build.outputs.build_failed == 'true'
-#         run: exit 1
-
 name: PR Checks
 
 on:
@@ -267,7 +28,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.25.5"
+          go-version: "1.x"
           cache: false
 
       - name: Install Go tools
@@ -394,7 +155,7 @@ jobs:
 
             # Security check
             if [[ "${ENABLE_GOSEC:-false}" == "true" ]]; then
-              if ! gosec_out=$(gosec ./... 2>&1); then
+              if ! gosec_out=$(gosec -exclude-dir=vendor -exclude-dir=test ./... 2>&1); then
                 CHECK_ERRORS+=$'\n- #### Security Check (gosec) Failed\n```text\n'"$gosec_out"$'\n```\n'
                 if [[ "${REQUIRED_GOSEC:-false}" == "true" ]]; then
                   FAILED=true
