--- a/.github/workflows/publish-policy.yml
+++ b/.github/workflows/publish-policy.yml
@@ -69,10 +69,10 @@ jobs:
 
           if [[ "$MAJOR" == "0" || "$MAJOR" == "1" ]]; then
             TARGET_DIR="policies/$POLICY"
-            MODULE_PATH="github.com/${{ github.repository }}/gateway-controllers/policies/$POLICY"
+            MODULE_PATH="github.com/${{ github.repository }}/policies/$POLICY"
           else
             TARGET_DIR="policies/$POLICY/v$MAJOR"
-            MODULE_PATH="github.com/${{ github.repository }}/gateway-controllers/policies/$POLICY/v$MAJOR"
+            MODULE_PATH="github.com/${{ github.repository }}/policies/$POLICY/v$MAJOR"
           fi
 
           TAG_NAME="policies/$POLICY/v$VERSION"
